samples/_failures_safe/1761248122_ace257_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e71ca9ac.c: In function ‘main’:
./samples/SAFE/__tmp_e71ca9ac.c:150:9: error: expected expression at end of input
  150 |         if (strcmp(line, "END") ==
      |         ^~
./samples/SAFE/__tmp_e71ca9ac.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e71ca9ac.c:150:9: error: expected declaration or statement at end of input
